force-app/main/default/objects/COMM_ProductReadiness__c/COMM_ProductReadiness__c.object-meta.xml
<CustomObject>
    <description>Responsible to score the status of the product configuration and identify which information is missing</description>
    <label>Product Readiness</label>
    <nameField>
        <label>Product Readiness Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Products Readiness</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>