force-app/main/default/objects/COMM_ProductReadiness__c/fields/COMM_HasCapacity__c.field-meta.xml
<CustomField>
    <fullName>COMM_HasCapacity__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Capacity</label>
    <type>Checkbox</type>
</CustomField>