force-app/main/default/objects/COMM_ProductReadiness__c/fields/COMM_HasPricing__c.field-meta.xml
<CustomField>
    <fullName>COMM_HasPricing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Pricing</label>
    <type>Checkbox</type>
</CustomField>