force-app/main/default/objects/COMM_ProductReadiness__c/fields/COMM_IsActive__c.field-meta.xml
<CustomField>
    <fullName>COMM_IsActive__c</fullName>
    <formula>COMM_Product__r.IsActive</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>