force-app/main/default/objects/COMM_ProductReadiness__c/fields/COMM_IsIntegratedOnCommerce__c.field-meta.xml
<CustomField>
    <fullName>COMM_IsIntegratedOnCommerce__c</fullName>
    <formula>COMM_Product__r.COMM_IsIntegratedInCommerce__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is integrated on Commerce?</label>
    <type>Checkbox</type>
</CustomField>