force-app/main/default/objects/COMM_ProductReadiness__c/fields/COMM_IsToUpdateOnCommerce__c.field-meta.xml
<CustomField>
    <fullName>COMM_IsToUpdateOnCommerce__c</fullName>
    <formula>COMM_Product__r.COMM_HasUpdateForCommerce__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is to Update on Commerce</label>
    <type>Checkbox</type>
</CustomField>