force-app/main/default/objects/COMM_ProductReadiness__c/fields/COMM_MissingInformationOnCommerce__c.field-meta.xml
<CustomField>
    <fullName>COMM_MissingInformationOnCommerce__c</fullName>
    <label>Missing Information on Commerce</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>