force-app/main/default/objects/COMM_ProductReadiness__c/fields/COMM_MissingInformationOnCore__c.field-meta.xml
<CustomField>
    <fullName>COMM_MissingInformationOnCore__c</fullName>
    <label>Missing Information on Core</label>
    <type>TextArea</type>
</CustomField>