force-app/main/default/objects/COMM_ProductReadiness__c/fields/COMM_Product__c.field-meta.xml
<CustomField>
    <fullName>COMM_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Products Readiness</relationshipLabel>
    <relationshipName>Products_Readiness</relationshipName>
    <type>Lookup</type>
</CustomField>