force-app/main/default/objects/COMM_ProductReadiness__c/fields/COMM_ProductCode__c.field-meta.xml
<CustomField>
    <fullName>COMM_ProductCode__c</fullName>
    <formula>COMM_Product__r.ProductCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Code</label>
    <type>Text</type>
</CustomField>