force-app/main/default/objects/COMM_ProductReadiness__c/fields/COMM_ProductName__c.field-meta.xml
<CustomField>
    <fullName>COMM_ProductName__c</fullName>
    <formula>COMM_Product__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Name</label>
    <type>Text</type>
</CustomField>