force-app/main/default/objects/COMM_ProductReadiness__c/fields/COMM_ScoreCommerce__c.field-meta.xml
<CustomField>
    <fullName>COMM_ScoreCommerce__c</fullName>
    <description>The current score of the product configuration for Commerce</description>
    <label>Score Commerce</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>