force-app/main/default/objects/COMM_ProductReadiness__c/fields/COMM_ScoreCore__c.field-meta.xml
<CustomField>
    <fullName>COMM_ScoreCore__c</fullName>
    <description>The current score of the product configuration for Core</description>
    <label>Score Core</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>